Added Auth route documentation
