# app/Documentation/Responses/UnauthenticatedError.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Documentation\Responses;
+
+/**
+ *  @OA\Schema(
+ *      schema="UnauthenticatedError",
+ *      type="object",
+ *      @OA\Property(
+ *          property="message",
+ *          type="string",
+ *          example="Unauthenticated"
+ *      )
+ * )
+ */
+class UnauthenticatedError
+{
+
+}
