# app/Http/Controllers/AuthenticationController.php
@@ -6,6 +6,39 @@ use Illuminate\Http\Request;
 
 class AuthenticationController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/login",
+     *     operationId="login",
+     *     summary="Login using email and password",
+     *     description="Logs the user in and returns the access token. Needed for write/delete requests",
+     *     tags={"Authentication"},
+     *     @OA\RequestBody(
+     *         description="The email and password of the user",
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"email", "password"},
+     *             @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="secret")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Successful login",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="access_token", type="string"),
+     *             @OA\Property(property="token_type", type="string", example="Bearer")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="401",
+     *          description="Bus line not found",
+     *          @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Invalid credentials")
+     *         )
+     *     )
+     * )
+     */
     public function login(Request $request)
     {
         $this->validate($request, [
@@ -29,6 +62,23 @@ class AuthenticationController extends Controller
         }
     }
 
+    /**
+     * @OA\Post(
+     *     path="/logout",
+     *     operationId="logout",
+     *     summary="Logout",
+     *     description="Logs the user out",
+     *     tags={"Authentication"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response="200",
+     *         description="Successful logout",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Logged out")
+     *         )
+     *     )
+     * )
+     */
     public function logout(Request $request)
     {
         $request->user()->tokens()->delete();
